java 11: new Integer(i)).doubleValue() -> Double.valueOf(i)